unpackaged/objects/WorkIt2__Context__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>WorkIt2__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Pattern_Alt__c</fullName>
        <label>Pattern Alt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Pattern__c</fullName>
        <label>Pattern</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__isCustom__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <label>Contexts</label>
</CustomObject>